--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
     "npm-run-all": "^4.1.5",
+    "react-hook-form": "^7.43.9",
     "rimraf": "^5.0.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
