--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.16.3",
-    "@types/react": "^18.2.2",
-    "@types/react-dom": "^18.2.3",
+    "@types/react": "17.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "electron": "^24.2.0",
@@ -24,7 +23,6 @@
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
     "npm-run-all": "^4.1.5",
-    "react-hook-form": "^7.43.9",
     "rimraf": "^5.0.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
@@ -39,7 +37,15 @@
     ]
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.12.3",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@types/react-dom": "^18.2.3",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.10"
   }
 }
