--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "rimraf dist && run-p dev:webpack dev:electron",
-    "build": "cross-env NODE_ENV=\"production\" webpack --progress",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
-    "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electronmon ."
+    "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electronmon .",
+    "build": "electron-packager ."
   },
   "keywords": [],
   "author": {
@@ -27,6 +27,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "electron": "^24.2.0",
+    "electron-packager": "^17.1.1",
     "electronmon": "^2.0.2",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
