--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "rimraf dist && run-p dev:webpack dev:electron",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electronmon .",
-    "build": "electron-packager ."
+    "build:mac": "electron-packager . --icon=calculator.icns --overwrite",
+    "build:win": "electron-packager . --icon=calculator_.ico --overwrite"
   },
   "keywords": [],
   "author": {
